# performance-metrics

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  compare_timeseries.py  requirements.txt  run.sh  setup.cfg
.github/workflows/: ci.yml
examples/: example_bismarck_flow.py  example_bismarck_stage.py  example_flow.py  example_reservoir.py  example_reservoir_wse.py  example_stage.py
metrics/: __init__.py  utils.py
tests/: test_metrics.py
timeseries_metrics/: __init__.py  utils.py
