[metadata]
name = performance-metrics
version = 0.1.0
description = Generic tools to compute performance metrics for observed vs modeled time series
long_description = file: README.md
long_description_content_type = text/markdown
author = egelaw
author_email = endalk.b@gmail.com
url = https://github.com/egelaw/performance-metrics
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pandas==2.2.3
    numpy==1.26.4
    scikit-learn==1.3.2
    matplotlib==3.8.1
    scipy==1.10.1
    openpyxl==3.1.2
python_requires = >=3.8

[options.packages.find]
where = .
